// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatMessages should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#FFFCFA"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 12,
          "width": 12,
        },
      ]
    }
  />
</View>
`;

exports[`ChatMessages should render correctly with messages 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#FFFCFA"
    style={
      [
        {
          "height": 24,
          "width": 24,
        },
        {
          "height": 12,
          "width": 12,
        },
      ]
    }
  />
  <Text
    allowFontScaling={false}
    ellipsizeMode="clip"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "fontSize": 10,
            "fontWeight": "bold",
            "paddingLeft": 2,
            "position": "absolute",
            "textAlign": "center",
          },
        ],
      ]
    }
  >
    1
  </Text>
</View>
`;
